--- a/server/Makefile
+++ b/server/Makefile
@@ -31,7 +31,7 @@
 
 ######## SGX SDK Settings ########
 
-SGX_SDK ?= /home/u/Desktop/sgx/sgxsdk
+SGX_SDK ?= /opt/intel/sgx/sgxsdk
 SGX_MODE ?= SIM
 SGX_ARCH ?= x64
 SGX_DEBUG ?= 1
